Fix center align in score panel

--- a/css/app.css
+++ b/css/app.css
@@ -104,7 +104,7 @@ h1 {
 .deck .card.match {
     cursor: default;
     background: #f7f318;
-    color: #fff;
+    color: #000;
     font-size: 2.1em;
     -webkit-animation-name: tada;
     animation-name: tada;
